[tool.poetry]
name = "fastbroker"
version = "0.1.0"
description = "Open Service Broker framework built on FastAPI"
authors = ["Vasili Syrakis <cetanu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.42.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-spec = "^1.1"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
